client/src/App.css
/* MEYERWEB CSS RESET */

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* END MEYER RESET */

/* BOX SIZING RESET */

* {
    box-sizing: border-box;
}

/* END BOX SIZING RESET */

/* START GENERAL SITE CSS */

:root {
    --page-color-whitecap: #D7E1EB;
    --page-color-navy-blue: #2E3373;
    --page-color-royal-blue: #026A86;
    --page-color-ruby: #A52026;
    --page-color-marmalade: #F15722;
    --font-Raleway: 'Raleway', sans-serif;
    --font-Montserrat: 'Montserrat', sans-serif;
}

body {
    /* background-color: var(--page-color-whitecap); */
    /* background: #00d2ff;  fallback for old browsers */
    /* background: -webkit-linear-gradient(to bottom, #3a7bd5, #00d2ff);  Chrome 10-25, Safari 5.1-6 */
    /* background: linear-gradient(to bottom, #3a7bd5, #00d2ff); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: #74ebd5;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to bottom, #ACB6E5, #74ebd5);
    /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to bottom, #ACB6E5, #74ebd5);
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    font-family: var(--font-Montserrat);
    text-shadow: 1px 1px 3px rgba(150, 150, 150, 1);
    font-size: 14px;
    /* display: flex; */
    /* justify-content: center; */
}

body h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-Raleway);
    font-weight: 300;
}

body:not(ParallaxHero) {
    background-color: var(--page-color-whitecap);
}

/* END GENERAL SITE CSS */

/* ADDED STYLING TO MAKE THE PAGE BIG ENOUGH TO SCROLL SO THE PARALLAX WOULD WORK*/

h1 {
    font-size: 4em;
    font-weight: bold;
}

h2 {
    font-size: 2.5em;
    font-weight: bold;
}

h3 {
    font-size: 1.8em;
    font-weight: bold;
}

li {
    padding: 30px 0;
}

/* END ADDED STYLING */

/* BEGIN NICK'S PARALLAX STYLING*/

/*  USED FOR THE PARALLAXHEADER COMPONENT */

.main-container {
    /* box-sizing: content-box; */
    perspective: 1px;
    transform-style: preserve-3d;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: scroll;
}

.main-container>.body-container {
    padding: 1% 5% 5% 5%;
    min-height: 55vh;
    width: calc(100vw + 17px);
    overflow-x: hidden;
}

/*  USED FOR THE PARALLAXHEADER COMPONENT */

/* Dev links styling */

.nav-container {
    text-align: center;
}

.dev-links-title {
    font-size: 1.8em;
    font-weight: bold;
    text-align: center;
    margin-bottom: 10px;
}

.nav-container .btn-link {
    padding: 10px;
    color: #fff;
    font-weight: bold;
    text-decoration: none;
    text-shadow: 0 0 2px #000, 0 0 5px #000, 0 0 10px #333, 0 0 15px #333, 0 0 20px #333, 0 0 25px #333;
}

.nav-container .btn-link:hover {
    padding: 10px;
    color: #e5ff00;
    text-shadow: 0 0 2px #000, 0 0 5px #000, 0 0 10px #00eef7, 0 0 15px #00eef7, 0 0 20px #00eef7, 0 0 25px #00eef7;
}

/* end Dev links styling */

